--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ ark-mnt6-298 = { version = "0.4.0", features = ["r1cs"] }
 ark-r1cs-std = "0.4.0"
 ark-relations = "0.4.0"
 ark-std = "0.4.0"
+ark-mnt4-298 = { version = "0.4.0", features = ["r1cs"] }
